1017: Fix issue with alignment of inline-block links in main column

--- a/assets/src/sass/base/_base.scss
+++ b/assets/src/sass/base/_base.scss
@@ -72,3 +72,11 @@
 .is-layout-constrained > .alignwide {
 	max-width: var(--wp--style--global--wide-size);
 }
+
+// Some buttons may end up as inline-block, which breaks layout because
+// margin: auto does not work with that display mode.
+.is-layout-constrained > .wp-block-shiro-button.is-style-as-link {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
